--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,11 @@ __pycache__/
 *.py[cod]
 *$py.class
 
+# Caches
+*.sqlite3
+db.sqlite3
+*.db
+
 # C extensions
 *.so
 
@@ -158,3 +163,36 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+# Virtual Environment
+venv/
+ENV/
+env/
+
+# Logs
+*.log
+
+# Debugging
+local_settings.py
+
+# Static files
+/static/
+
+# Media files
+/media/
+
+# Secret key
+*.secret_key
+
+# Django development server
+manage.py
+
+# IDE
+.vscode/
+.idea/
+*.iml
+
+# Dependency directories
+node_modules/
+/bower_components/
+pip-wheel-metadata/
